--- a/templates/sharkwords.html
+++ b/templates/sharkwords.html
@@ -22,5 +22,7 @@
     <section id="word-container"></section>
 
     <section id="letter-buttons"></section>
+    <script src='/static/js/sharkwords.js'> 
+    </script>
   </body>
 </html>
